# lilygo-ttgo-lora32

./: CMakeLists.txt  readme.md
boards/xtensa/lilygo_ttgo_lora32/: CMakeLists.txt  Kconfig.board  lilygo_ttgo_lora32.dts  lilygo_ttgo_lora32.yaml  lilygo_ttgo_lora32_defconfig
src/: main.c
